--- a/style.css
+++ b/style.css
@@ -1,104 +1,545 @@
-body {
-  background-image: url("images/bg1.png");
-  background-size: 100%;
-}
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600,700|Teko:400,500,600,700");
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+  --pCol: #fa0347;
+  --sCol: #f1f1f2;
+  /* font-size: 1rem; */
 }
+body,
+html {
+  width: 100%;
+  scroll-behavior: smooth;
+}
+
+/* Custom scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* background: #555; */
+  background: #888;
+  /* background: rgba(43,27,52,0.8); */
+  /* border-radius: 1rem; */
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--pCol);
+}
+
+/* home section  */
 #home {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+  width: 100%;
+  height: 100vh;
+  /* background-position: center; */
+}
+
+#home::before {
+  content: "";
+  background-image: url("images/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left top;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
 }
 
 .navbar {
   display: flex;
-  width: 100vw;
   position: absolute;
-  margin-top: 10px;
-  /* border-radius: 20px; */
+  align-items: center;
+  /* margin-top: 30px; */
+  top: 30px;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0px 10% 0px 5%;
+  transition: top 1s;
+  z-index: 99;
+  height: fit-content;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  padding: 15px 10% 15px 5%;
+  width: 100%;
+  background-color: rgba(43, 27, 52, 0.8);
+  z-index: 999;
+}
+.header-animation {
+  -webkit-animation-name: fadeInDown;
+  animation-name: fadeInDown;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .navbar ul {
   display: flex;
   position: relative;
-  margin-left: 4rem;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navbar li {
   list-style: none;
-  margin: 40px 10px;
 }
 
 .navbar li a {
-  align-self: center;
-  padding: 5px 6px;
+  padding: 0px 1em;
   text-decoration: none;
-  color: #f1f1f2;
+  color: var(--sCol);
   transition: all 0.3s ease-out;
+  font-size: 1rem;
 }
 
 .navbar li a:hover {
-  color: #fa0347;
+  color: var(--pCol);
 }
 
 #logo {
   position: relative;
-  margin: 20px 60px;
   width: 182px;
-  display: inline-block;
 }
 .btn {
-  background-color: #fa0347;
+  background-color: var(--pCol);
   border-radius: 40px;
-  padding: 1rem 2rem;
-  width: fit-content;
+  border-radius: 2.5em;
+  padding: 0.8em 2.3em;
+  /* width: max-content; */
   height: fit-content;
   border: none;
   text-decoration: none;
-  color: #f1f1f2;
+  color: var(--sCol);
   font-size: 1rem;
+  font-weight: 500;
   cursor: pointer;
   /* font-weight: bold; */
-  transition: all 0.3s ease-in-out;
+  transition: 0.4s;
+  /* transition: 0.5s; */
+  background-size: 200% auto;
+  background-image: linear-gradient(
+    to left,
+    #fa0347 0%,
+    #fc561c 50%,
+    #fa0347 100%
+  );
 }
 .btn:hover {
-  color: #f1f1f2;
-  transform: scale(1.1);
+  color: var(--sCol);
+  background-position: right center; /* change the direction of the gradient transition */
+  /* transform: scale(1.05); */
 }
+
 #join {
   position: relative;
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
   align-self: center;
+}
+#main {
+  position: relative;
+  width: max-content;
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
 main {
   position: relative;
-  width: fit-content;
-  align-self: center;
-  margin-top: 250px;
+  /* width: 600px; */
+  width: max-content;
+  margin-top: 10em;
+  margin-left: 2em;
+  /* align-self: center; */
   background-color: rgba(0, 0, 0, 0.5);
   /* opacity: 0.7; */
-  color: #fa0347;
+  color: var(--pCol);
+  font-family: "Teko", sans-serif;
   text-align: center;
-  padding: 2rem 4rem;
-  border-radius: 1rem;
+  padding: 2em 3em;
+  border-radius: 1em;
 }
-main h1 {
+main h1,
+main p {
   font-size: 5rem;
   font-weight: 600;
 }
 main span,
 main p {
-  color: #f1f1f2;
+  color: var(--sCol);
+  
 }
 main p {
-  font-size: larger;
+  /* font-size: larger; */
+  font-size: 1.25rem;
   text-transform: uppercase;
-  padding: 0.5rem;
+  padding: 0.4em;
+  line-height: 0.8;
 }
+
 #home-join {
   position: relative;
-  top: 5px;
+  margin-top: 1em;
+}
+
+/* Features Section */
+#features {
+  position: relative;
+  left: 0px;
+  padding: 7em 0;
+  width: 100%;
+  height: fit-content;
+  background-color: #fff;
+}
+.sub-heading {
+  color: var(--pCol);
+  text-align: center;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+}
+.heading {
+  color: #2c3033;
+  margin-top: 0.4em;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+  font-family: "Teko", sans-serif;
+  /* text-shadow: 4px 0px 4px rgba(44,48,51,0.4); */
+}
+.mini-heading {
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  font-size: 1.7rem;
+  text-align: center;
+}
+.para {
+  font-size: 14px;
+  line-height: 1.857;
+  margin-top: 1em;
+  color: #8a8a8a;
+  font-family: "Open Sans", sans-serif;
+  text-align: left;
+  font-weight: 400;
+}
+.h-para {
+  text-align: center;
+  width: 100%;
+}
+.mt-0 {
+  margin-top: 0em;
+}
+.mt-1 {
+  margin-top: 1em;
+}
+#features-grid {
+  position: relative;
+  margin-top: 3em;
+  display: grid;
+  /* grid-template-columns: 300px auto 100px; */
+  /* grid-template-columns: 2fr 5fr 1fr ; */
+  grid-template-columns: 1fr 0.9fr 1fr;
+  grid-gap: 0em;
+  width: 100%;
+  height: fit-content;
+  /* height: 90vh; */
+  /* background-color: aliceblue; */
+  padding: 0em 4em;
+  /* border: 2px solid black; */
+}
+
+#features-grid h3 {
+  margin-top: 1em;
+  text-align: left;
+}
+/* #features-grid p {
+
+} */
+.features-div {
+  position: relative;
+  margin-left: 1em;
+}
+.features-margin-bottom {
+  margin-bottom: 3.5em;
+}
+
+.features-icons-outer {
+  height: 65px;
+  width: 65px;
+  display: inline-block;
+  border-radius: 15% 15% 80% 15% / 15% 15% 30% 15%;
+  background-image: -webkit-linear-gradient(45deg, #fa0347 1%, #fc561c 99%);
+  line-height: 65px;
+  -webkit-transition: 0.2s;
+  transition: all 0.3s ease-in-out;
+}
+.features-icon-space {
+  font-size: 42px;
+  text-align: center;
+}
+
+#features-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
+}
+
+.features-icons {
+  height: 40px;
+  width: 40px;
+  filter: invert(98%) sepia(12%) saturate(147%) hue-rotate(234deg)
+    brightness(116%) contrast(100%);
+}
+#features-center {
+  /* width: 500px; */
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  /* background-color: #fa0347; */
+  /* padding: 0em 1em; */
+}
+#features-center img {
+  /* height: 85vh; */
+  /* height: 70vh; */
+  width: 14em;
+  /* height: 100%; */
+  height: fit-content;
+}
+
+/* Programs Section */
+
+#programs {
+  position: relative;
+  width: 100%;
+  left: 0;
+  height: fit-content;
+  /* background-color: aliceblue; */
+  background-color: #f6f5f1;
+  /* height: 150vh; */
+  padding-top: 7em;
+}
+#programs-grid {
+  position: relative;
+  left: 0;
+  margin-top: 4em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 0em;
+  width: 100%;
+  height: fit-content;
+  padding: 0em 0em;
+  /* background-color: aqua; */
+}
+
+#programs-grid img {
+  max-width: 100%;
+  height: 100%;
+}
+.programs-img-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.4s ease-in-out 0s;
+  background-color: rgba(0, 0, 0, 35%);
+  /* z-index: 1; */
+}
+.programs-img-container:hover .overlay {
+  opacity: 1;
+}
+.overlay-text {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  /* height: fit-content; */
+  top: 50%;
+  left: 50%;
+  /* opacity: inherit; */
+  transform: translate(-50%, -50%);
+  transition: all 0.4s ease-in-out 0s;
+  z-index: 99;
+  /* background-color: #ffffff; */
+  color: #fff;
+  top: 30%;
+}
+.programs-img-container:hover .overlay-text {
+  top: 50%;
+  left: 50%;
+}
+
+/* Contact section */
+#contact {
+  position: relative;
+  width: 100%;
+  left: 0;
+  height: fit-content;
+  /* background-color: aliceblue; */
+  background-color: #f6f5f1;
+  /* height: 150vh; */
+  padding: 5em 0;
+}
+
+#contact-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  height: fit-content;
+  width: 40%;
+  margin: 0 auto;
+  padding: 2em;
+}
+#contact-div label {
+  color: #000;
+  padding: 0.5em;
+}
+#contact-div input,
+#contact-div textarea {
+  font-size: 1rem;
+  padding: 0.4em;
+  margin-bottom: 1.5em;
+}
+#submit {
+  width: 10rem;
+  align-self: center;
+}
+
+
+/* Footer Section */
+#footer {
+  position: relative;
+  height: fit-content;
+  width: 100%;
+  padding: 2em 0;
+  text-align: center;
+  background-color: rgba(43, 27, 52, 0.8);
+  color: #fff;
+  display: grid;
+}
+
+/*for hamburger*/
+.line {
+  width: 33px;
+  background-color: var(--pCol);
+  height: 4px;
+  margin: 5px 3px;
+}
+.hamburger {
+  display: none;
+  position: absolute;
+  cursor: pointer;
+  right: 5%;
+  top: 15px;
+}
+
+@media only screen and (max-width: 900px) {
+  .navbar ul {
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 80%;
+    top: -300px;
+    position: absolute;
+    transition: all 0.45s ease-in-out;
+  }
+  .navbar li {
+    padding: 1em 0;
+  }
+  #logo {
+    position: relative;
+    top: 0;
+    transition: all 0.4s ease-in-out;
+  }
+  .nav-transition {
+    top: 0 !important;
+  }
+  .logo-transition {
+    top: -100px !important;
+  }
+
+  .hamburger {
+    display: block;
+  }
+  #join {
+    display: none;
+  }
+  #main {
+    width: 100%;
+    justify-content: center;
+  }
+  main {
+    padding: 1em 2em;
+    margin-left: 0;
+    margin-top: 20vh;
+    text-align: left;
+  }
+  main h1 {
+    font-size: 4rem;
+    padding-bottom: 0.25em;
+  }
+  main p {
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
+
+  #home::before {
+    background-position: top;
+  }
+
+  #features-grid {
+    grid-template-columns: 1fr;
+  }
+  #features-center {
+    padding: 3em 0;
+  }
+  .heading {
+    padding: 0 1em;
+  }
+  .h-para {
+    padding: 0 2em;
+    text-align: left;
+  }
+  #contact-div {
+    width: 90%;
+  }
 }
